# openfront-gtk

./: LICENSE  README.md  install.sh  openfront-gtk.py  pyproject.toml
openfront-gkt/: __init__.py  app.py
openfront-gtk/: __main__.py  app.py
packaging/: openfront-gtk.desktop
tests/: test_allowlist.py
